[package]
name = "aio-limited"
version = "0.1.1"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0 OR MIT"
description = "Rate-limited async I/O."
repository = "https://github.com/paritytech/aio-limited"
readme = "README.md"

[dependencies]
futures = "0.1"
log = "0.4"
parking_lot = "0.9"
tokio-executor = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"

[dev-dependencies]
env_logger = "0.6"
tokio = "0.1"

